k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-devops-service
spec:
  selector:
    app: simple-devops-app
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: NodePort
